- structs.h: smpoly moved to sparsemat.cc, 
             tHomog moved to ring.h, 
	     Exponent_t removed
- memory leaks fixed for nc rings (trac 214)
- documentation updates: primdec.lib, PLURAL
- new lib: surfsig.lib (renamed from signature.lib)
- memory leaks fixed: nlGcd, nc_ReduceSpolyNew
- new lib: dmodvar.lib

-  Fri Feb 26 11:55:05 MEZ 2010
  release 3-1-1
- Mon Feb  8 13:28:50 CET 2010
  beta of 3-1-1
