@@ -9,6 +9,7 @@
 */
 #include <string.h>
 #include "structs.h"
+#include "idrec.h"
 #include "subexpr.h"
 
 extern idhdl currPackHdl;
@@ -78,7 +79,7 @@ typedef struct
 
 char *idhdl2id(idhdl pck, idhdl h);
 void  iiname2hdl(const char *name, idhdl *pck, idhdl *id);
-idhdl enterid(const char * a, int lev, idtyp t, idhdl* root, BOOLEAN init=TRUE);
+idhdl enterid(const char * a, int lev, int t, idhdl* root, BOOLEAN init=TRUE);
 idhdl ggetid(const char *n);
 idhdl ggetid(const char *n, BOOLEAN local, idhdl *packhdl);
 void  killid(const char * a, idhdl * i);
